adding lab 1 files

--- a/labs/lab1/css/styles.css
+++ b/labs/lab1/css/styles.css
@@ -31,9 +31,39 @@ nav a:hover{
 }
 
 
-
 footer{
     font-size:.75em;
     color:white;
     clear:left;
+}
+
+table{
+    margin:0px auto;
+}
+
+td{
+    padding-right:10px;
+    font-size: 1.3em;
+}
+td strong{
+    color:orange;
+}
+
+#table-header{
+    background-color: #351a00;
+}
+
+.table-row{
+    background-color: #753900;
+}
+
+ul{
+    text-align: left;
+    padding-left:200px;
+}
+
+h1{
+    font-family:"Dancing Script", cursive;
+    font-size: 4em;
+    margin-bottom:0px;
 }
