--- a/labs/lab1/css/styles.css
+++ b/labs/lab1/css/styles.css
@@ -4,7 +4,7 @@ body{
 }
 
 header, main, nav, footer{
-    text-align:center;
+    text-align: center;
 }
 
 nav a{
@@ -23,11 +23,11 @@ nav a:hover{
 }
 
 #me, #welcomeText{
-    float:left;
+    float:none;
 }
 
 #welcomeText{
-    text-align: left;
+    text-align: center;
 }
 
 
