--- a/hw/hw1/css/styles.css
+++ b/hw/hw1/css/styles.css
@@ -12,6 +12,7 @@ header, footer{
 
 header{
     font-family: 'Fredoka One', cursive;
+    text-shadow: 2px 1px gray;
 }
 
 nav{
@@ -61,6 +62,10 @@ footer{
    float:left; 
 }
 
+#Pic1{
+    padding-left: 30px;
+}
+
 
 #text1{
     font-size:1.2em;
@@ -69,16 +74,74 @@ footer{
 
 #pyPic{
     float:right;
+    padding-right: 60px;
+    padding-bottom: 20px;
 }
 
 #textPy{
     text-align:left;
-    padding-left:150px;
+    padding-left:160px;
+    padding-top: 20px;
+    font-size: 1.2em;
 }
 
 #pythonFooter{
     clear:right;
 }
+
+#pythonDetails{
+    padding-left: 160px;
+}
+
+#pysource{
+    color: white;
+}
+
+#cPic{
+    width:200px;
+    height:200px;
+    padding-left: 180px;
+    padding-bottom: 30px;
+}
+
+#cText, #cPic{
+    padding-left: 75px;
+    float:left;
+    font-size: 1.2em;
+}
+
+.source{
+    color:white;
+}
+
+#Cdetails{
+    padding-right: 100px;
+    padding-left: 75px;
+    font-size: 1.2em;
+    float:left;
+}
+
+#javaText, #javaPic{
+    float:left;
+    font-size: 1.2em;
+}
+
+#javaPic{
+    padding-left: 100px;
+    padding-bottom: 40px;
+}
+
+#javaText{
+    padding-left: 50px;
+}
+
+#javaDetails{
+    float:left;
+    padding-right: 50px;
+    font-size: 1.2em;
+    padding-left:50px;
+}
+
 
 
 
