--- a/hw/hw1/css/styles.css
+++ b/hw/hw1/css/styles.css
@@ -1,5 +1,6 @@
 body{
-    background-color: black;
+    background-image:linear-gradient(45deg, black, rgba(90,90,90));
+    height:750px;
     color: gray;
 }
 
