--- a/hw/hw1/css/styles.css
+++ b/hw/hw1/css/styles.css
@@ -1,6 +1,6 @@
 body{
     background-image:linear-gradient(45deg, black, rgba(90,90,90));
-    height:750px;
+    height:1000px;
     color: gray;
 }
 
@@ -96,6 +96,7 @@ footer{
 
 #pythonDetails{
     padding-left: 160px;
+    font-size: 1.2em;
 }
 
 #pysource{
@@ -120,10 +121,11 @@ footer{
 }
 
 #Cdetails{
-    padding-right: 100px;
-    padding-left: 75px;
     font-size: 1.2em;
-    float:left;
+    clear:left;
+    padding-left: 350px;
+    padding-bottom: 50px;
+    top: -20px;
 }
 
 #javaText, #javaPic{
@@ -142,16 +144,23 @@ footer{
 }
 
 #javaDetails{
-    float:left;
-    padding-right: 50px;
+    clear:left;
+    padding-left: 400px;
     font-size: 1.2em;
-    padding-left:50px;
+    padding-bottom: 30px;
 }
 
 .logo{
     width:100px;
 }
 
+.container{
+    position: relative;
+}
+.block{
+    position: absolute;
+    top:160px;
+}
 
 
 
