--- a/labs/lab7/css/styles.css
+++ b/labs/lab7/css/styles.css
@@ -1,3 +1,13 @@
 #products{
     padding-left: 20px;
 }
+
+#login, #text{
+    text-align: center;
+}
+
+#text{
+    background-color: lightgray;
+    padding-bottom: 10px;
+    padding-top: 10px;
+}
